// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update User with invalid data- id does not return user 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "User": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Update User with valid data returns user if succeeded 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "User": Object {
        "description": "description",
        "dob": 1900-01-01T00:00:00.000Z,
        "email": "user1@gmail.com",
        "fullName": "jello",
        "handle": "user1",
        "id": "1",
        "licenseS3Id": "license?.s3Id",
        "passportS3Id": "passport?.s3Id",
        "solvencyS3Id": "solvency?.s3Id",
        "zip": 9000,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
